[tool.poetry]
name = "gpt"
version = "0.1.0"
description = "OpenAI Code"
authors = ["Peter Fiee <peterfiee@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.4"
requests = "^2.28.2"
customtkinter = "^5.1.2"
black = "^23.3.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
