[tool.poetry]
name = "customtk"
version = "0.1.0"
description = "Simple Gui Applications"
authors = ["Peter Fiee <peterfiee@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.4"
requests = "^2.28.2"
customtkinter = "^5.1.2"
black = "^23.3.0"
mypy = "^1.2.0"
tkintermapview = "^1.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
